Address as many PEP8 warnings as possible.

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
-name = gias3.common
-version = attr: src.gias3.common.__version__
+name = gias3.mapclientpluginutilities
+version = attr: src.gias3.mapclientpluginutilities.__version__
 description = Common modules for GIAS3
 long_description = file: README.rst, LICENSE.rst
 keywords = musculoskeletal, modelling
@@ -16,6 +16,12 @@ namespace_packages = gias3
 package_dir =
     =src
 packages = find:
+install_requires =
+    PySide2
+    mayavi
+    traits
+    traitsui
+    gias3.fieldwork
 
 [options.packages.find]
 where = src
